--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -37,4 +37,5 @@ jobs:
             - name: Test
               run: |
                 pip install pytest
+                python3 -c "from skrobot.models.fetch import Fetch; Fetch()"  # create cache
                 pytest python
