--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -44,3 +44,4 @@ jobs:
                 python3 example/fetch_ik.py
                 python3 example/fetch_plan.py
                 python3 example/humanoid_planning.py
+                python3 example/humanoid_lift_and_place_box.py
