refactor: tinyfk is part of source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,8 @@ find_package(Eigen3 REQUIRED)
 ADD_DEFINITIONS(-DEIGEN_NO_DEBUG)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-option(BUILD_PYTHON_INTERFACE OFF)
-add_subdirectory("tinyfk")
-
-include_directories("tinyfk/include")
-include_directories("primitive_sdf")
+add_subdirectory("third/urdf_parser")
+include_directories("third/urdf_parser/include")
 
 option(USE_VALGRIND "Use valgrind to profile the code" OFF)
 if(USE_VALGRIND)
@@ -31,5 +28,5 @@ endif()
 file(GLOB_RECURSE SRC_FILES cpp/*.cpp)
 add_subdirectory(pybind11)
 pybind11_add_module(_plainmp ${SRC_FILES})
-target_link_libraries(_plainmp PRIVATE tinyfk)
+target_link_libraries(_plainmp urdfdom_model)
 install(TARGETS _plainmp DESTINATION .)
