--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "third/ompl"]
+	path = third/ompl
+	url = https://github.com/HiroIshida/ompl.git
