--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -30,7 +30,7 @@ jobs:
 
             - name: Install this package
               run: |
-                  sudo apt-get install libeigen3-dev
+                  sudo apt-get install libeigen3-dev libboost-all-dev
                   pip install scikit-build
                   pip install -e . -v
 
