--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -38,6 +38,7 @@ jobs:
               run: |
                 pip install pytest
                 for i in {1..3}; do pytest python && break || echo "Test failed... retrying ($i)"; done
+              timeout-minutes: 5
 
             - name: Run examples
               run: |
@@ -45,3 +46,4 @@ jobs:
                 for i in {1..3}; do python3 example/fetch_plan.py && break || echo "fetch_plan.py failed... retrying ($i)"; done
                 for i in {1..3}; do python3 example/humanoid_planning.py && break || echo "humanoid_planning.py failed... retrying ($i)"; done
                 for i in {1..3}; do python3 example/humanoid_lift_and_place_box.py && break || echo "humanoid_lift_and_place_box.py failed... retrying ($i)"; done
+              timeout-minutes: 10
