--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -25,6 +25,7 @@ jobs:
 
             - name: install scikit-robot
               run: |
+                sudo apt-get update
                 sudo apt-get install libspatialindex-dev freeglut3-dev libsuitesparse-dev libblas-dev liblapack-dev
                 pip install scikit-robot
 
