refactor: define endeffector spec in yaml
* [plainmp/robot_spec.py] rewrite get_kin, get_robot_model

* [plainmp/conf] add a0b, add end_effectors slots

* [plainmp] add surrounding.py

* [example] update fetch demo

* [example] update jaxon demo

* [example] add a0b demo

* [plainmp/robot_spec.py] delete unused import

* [plainmp/conf] [example/jaxon_ik.py] revert end_effector names

* [plainmp/robot_spec.py] revert crate_pose_const_from_coords for backward compatibility

* [plainmp/robot_spec.py] add comments on logic of get_kin

* [plain/robot_spec.py] set link variable to avoid duplicated getattr

* [plainmp/conf/jaxon.yaml] add missed rarm_tip_coords as the end_effector

* [plainmp/conf] reformat end_effectors definition layout

* [example] without using surrounding

* remove a0b demo

* [example] [plainmp/robot_spec.py] format

* [example] revert

* [plainmp/robot_spec.py] remove A0BSpec

* [example] [plainmp/robot_spec.py] reformat

* [example] revert

--- a/python/plainmp/conf/fetch.yaml
+++ b/python/plainmp/conf/fetch.yaml
@@ -10,6 +10,12 @@ control_joint_names:
   - wrist_flex_joint
   - wrist_roll_joint
 
+end_effectors:
+  rarm_end_coords:
+    parent_link: gripper_link
+    position: [0, 0, 0]
+    rpy: [0.0, 0.0, 0.0]
+
 self_collision_pairs:
   - [head_pan_link,   upperarm_roll_link]
   - [head_pan_link,   elbow_flex_link]
