--- a/python/plainmp/conf/panda.yaml
+++ b/python/plainmp/conf/panda.yaml
@@ -8,12 +8,14 @@ control_joint_names:
   - panda_joint6
   - panda_joint7
 collision_spheres:
-  panda_link0:
-    ignore_collision: false
-    spheres:
-      - [-0.01, 0.0, 0.04, 0.09]
-      - [-0.07, 0.0, 0.035, 0.07]
-      - [-0.00, 0.0, 0.1, 0.07]
+  # panda_link0 should be ignored because it is fixed to the world
+  # Also, it is problematic to define ground collision box
+  # panda_link0:
+  #   ignore_collision: false
+  #   spheres:
+  #     - [-0.01, 0.0, 0.04, 0.09]
+  #     - [-0.07, 0.0, 0.035, 0.07]
+  #     - [-0.00, 0.0, 0.1, 0.07]
   panda_link1:
     ignore_collision: false
     spheres:
