--- a/python/plainmp/conf/fetch.yaml
+++ b/python/plainmp/conf/fetch.yaml
@@ -31,6 +31,11 @@ self_collision_pairs:
   - [torso_lift_link, gripper_link]
   - [torso_lift_link, l_gripper_finger_link]
   - [torso_lift_link, r_gripper_finger_link]
+
+only_self_collision_links:
+  - head_pan_link
+  - torso_lift_link
+
 collision_spheres:
   shoulder_pan_link:
     spheres:
@@ -103,7 +108,6 @@ collision_spheres:
       - [-0.005, -0.01, 0.0, 0.02]
       - [-0.03, -0.01, 0.0, 0.02]
   head_pan_link:
-    only_self_collision: true
     spheres:
       - [-0.02625,     0.03,        0.04956858    ,0.08]
       - [0.03375 ,   0.03  ,     0.04956858       ,0.08]
@@ -122,7 +126,6 @@ collision_spheres:
       - [ 0.09375,    -0.09,        0.04956858    ,0.08]
       - [ 0.15375,    -0.09,        0.04956858    ,0.08]
   torso_lift_link:
-    only_self_collision: true
     spheres:
       - [0.006875, 0.,       0.55257, 0.1]
       - [0.036875, 0.,       0.59257, 0.1]
