--- a/python/plainmp/conf/fetch.yaml
+++ b/python/plainmp/conf/fetch.yaml
@@ -36,6 +36,27 @@ only_self_collision_links:
   - head_pan_link
   - torso_lift_link
 
+self_body_collision_primitives:
+  - type: cylinder
+    radius: 0.29
+    height: 0.32
+    position: [0.005, 0.0, 0.2]
+    rotation: [0.0, 0.0, 0.0]
+  - type: box
+    extents: [0.16, 0.16, 1.0]
+    position: [-0.12, 0.0, 0.5]
+    rotation: [0.0, 0.0, 0.0]
+  - type: cylinder
+    radius: 0.1
+    height: 1.5
+    position: [-0.143, 0.09, 0.75]
+    rotation: [0.0, 0.0, 0.0]
+  - type: cylinder
+    radius: 0.1
+    height: 1.5
+    position: [-0.143, -0.09, 0.75]
+    rotation: [0.0, 0.0, 0.0]
+
 collision_spheres:
   shoulder_pan_link:
     spheres:
