refactor: remove unnecessary end effector conf in yaml

--- a/python/plainmp/conf/fetch.yaml
+++ b/python/plainmp/conf/fetch.yaml
@@ -10,11 +10,15 @@ control_joint_names:
   - wrist_flex_joint
   - wrist_roll_joint
 
-end_effectors:
-  rarm_end_coords:
-    parent_link: gripper_link
-    position: [0, 0, 0]
-    rpy: [0.0, 0.0, 0.0]
+default_joint_positions:
+  - torso_lift_joint: 0.0
+  - shoulder_pan_joint: 1.312
+  - shoulder_lift_joint: 1.40
+  - upperarm_roll_joint: -0.20
+  - elbow_flex_joint: 1.72
+  - forearm_roll_joint: 0.0
+  - wrist_flex_joint: 1.66
+  - wrist_roll_joint: 0.0
 
 self_collision_pairs:
   - [head_pan_link,   upperarm_roll_link]
