fix: temporary remove ERTConnect AIT and BIT

--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install This Package
         run: |
-          sudo apt-get install libeigen3-dev libboost-all-dev
+          sudo apt-get install libeigen3-dev libboost-all-dev libompl-dev
           pip install scikit-build
           MAKEFLAGS="-j$(nproc)" pip install -e . -v
 
