feat: copy ertconnect source code and revive ertconnect

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ include_directories("third/urdf_parser/include")
 find_package(Boost REQUIRED COMPONENTS serialization)
 find_package(ompl REQUIRED)
 include_directories(${OMPL_INCLUDE_DIRS})
+add_subdirectory("third/ompl-ertconnect")
+include_directories("third/ompl-ertconnect")
 
 option(USE_VALGRIND "Use valgrind to profile the code" OFF)
 if(USE_VALGRIND)
@@ -44,5 +46,5 @@ include_directories(cpp)
 add_subdirectory(pybind11)
 pybind11_add_module(_plainmp ${SRC_FILES})
 add_dependencies(_plainmp generate_sequence_table)
-target_link_libraries(_plainmp urdfdom_model ompl ${Boost_LIBRARIES})
+target_link_libraries(_plainmp urdfdom_model ompl ertconnect ${Boost_LIBRARIES})
 install(TARGETS _plainmp DESTINATION .)
