--- a/python/plainmp/conf/pr2_larm.yaml
+++ b/python/plainmp/conf/pr2_larm.yaml
@@ -9,6 +9,16 @@ control_joint_names:
   - l_wrist_flex_joint
   - l_wrist_roll_joint
 
+only_self_collision_links:
+  - r_upper_arm_link
+  - r_elbow_flex_link
+  - r_forearm_link
+  - r_gripper_palm_link
+  - r_gripper_r_finger_link
+  - r_gripper_l_finger_link
+  - r_shoulder_pan_link
+  - base_link
+
 self_collision_pairs:
   # rarm => larm
   - [r_gripper_palm_link, l_upper_arm_link]
