--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -71,6 +71,7 @@ jobs:
           run_example "example/fetch_plan.py" "--pcloud" || exit 1
           run_example "example/panda_plan.py" || exit 1
           run_example "example/panda_plan.py" "--difficult" || exit 1
+          run_example "example/attach_box_ik_and_plan.py" || exit 1
           run_example "example/beta/humanoid_planning.py" || exit 1
           run_example "example/beta/humanoid_lift_and_place_box.py" || exit 1
         timeout-minutes: 10
