--- a/.github/workflows/build_and_test.yaml
+++ b/.github/workflows/build_and_test.yaml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - master
+      - dev
     paths-ignore:
       - "README.md"
   pull_request:
     branches:
       - master
+      - dev
     paths-ignore:
       - "README.md"
 
