fix: update cmake minimum to 3.10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 17)
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
@@ -46,5 +47,5 @@ include_directories(cpp)
 add_subdirectory(pybind11)
 pybind11_add_module(_plainmp ${SRC_FILES})
 add_dependencies(_plainmp generate_sequence_table)
-target_link_libraries(_plainmp urdfdom_model ompl ertconnect ${Boost_LIBRARIES})
+target_link_libraries(_plainmp PRIVATE urdfdom_model ompl ertconnect ${Boost_LIBRARIES})
 install(TARGETS _plainmp DESTINATION .)
