--- a/python/plainmp/conf/pr2_rarm.yaml
+++ b/python/plainmp/conf/pr2_rarm.yaml
@@ -20,54 +20,19 @@ only_self_collision_links:
   - l_shoulder_pan_link
   - base_link
 
-self_collision_pairs:
+self_collision_group_pairs:
   # rarm => larm
-  - [r_gripper_palm_link, l_shoulder_pan_link]
-  - [r_gripper_palm_link, l_upper_arm_link]
-  - [r_gripper_palm_link, l_elbow_flex_link]
-  - [r_gripper_palm_link, l_forearm_link]
-  - [r_gripper_palm_link, l_gripper_palm_link]
-  - [r_gripper_palm_link, l_gripper_r_finger_link]
-  - [r_gripper_palm_link, l_gripper_l_finger_link]
-  - [r_gripper_r_finger_link, l_shoulder_pan_link]
-  - [r_gripper_r_finger_link, l_upper_arm_link]
-  - [r_gripper_r_finger_link, l_elbow_flex_link]
-  - [r_gripper_r_finger_link, l_forearm_link]
-  - [r_gripper_r_finger_link, l_gripper_palm_link]
-  - [r_gripper_r_finger_link, l_gripper_r_finger_link]
-  - [r_gripper_r_finger_link, l_gripper_l_finger_link]
-  - [r_gripper_l_finger_link, l_shoulder_pan_link]
-  - [r_gripper_l_finger_link, l_upper_arm_link]
-  - [r_gripper_l_finger_link, l_elbow_flex_link]
-  - [r_gripper_l_finger_link, l_forearm_link]
-  - [r_gripper_l_finger_link, l_gripper_palm_link]
-  - [r_gripper_l_finger_link, l_gripper_r_finger_link]
-  - [r_gripper_l_finger_link, l_gripper_l_finger_link]
+  - group1: [r_gripper_palm_link, r_gripper_r_finger_link, r_gripper_l_finger_link]
+    group2: [l_shoulder_pan_link, l_upper_arm_link, l_elbow_flex_link, l_forearm_link, l_gripper_palm_link, l_gripper_r_finger_link, l_gripper_l_finger_link]
   # larm => rarm
-  - [l_gripper_palm_link, r_shoulder_pan_link]
-  - [l_gripper_palm_link, r_upper_arm_link]
-  - [l_gripper_palm_link, r_elbow_flex_link]
-  - [l_gripper_palm_link, r_forearm_link]
-  - [l_gripper_r_finger_link, r_shoulder_pan_link]
-  - [l_gripper_r_finger_link, r_upper_arm_link]
-  - [l_gripper_r_finger_link, r_elbow_flex_link]
-  - [l_gripper_r_finger_link, r_forearm_link]
-  - [l_gripper_l_finger_link, r_shoulder_pan_link]
-  - [l_gripper_l_finger_link, r_upper_arm_link]
-  - [l_gripper_l_finger_link, r_elbow_flex_link]
-  - [l_gripper_l_finger_link, r_forearm_link]
+  - group1: [l_gripper_palm_link, l_gripper_r_finger_link, l_gripper_l_finger_link]
+    group2: [r_shoulder_pan_link, r_upper_arm_link, r_elbow_flex_link, r_forearm_link]
   # rarm => rarm
-  - [r_gripper_palm_link, r_shoulder_pan_link]
-  - [r_gripper_r_finger_link, r_shoulder_pan_link]
-  - [r_gripper_r_finger_link, r_shoulder_pan_link]
-  # larm => larm
-  - [l_gripper_palm_link, l_shoulder_pan_link]
-  - [l_gripper_r_finger_link, l_shoulder_pan_link]
-  - [l_gripper_l_finger_link, l_shoulder_pan_link]
-  # vs base_link
-  - [r_gripper_r_finger_link, base_link]
-  - [r_gripper_l_finger_link, base_link]
-  - [r_gripper_palm_link, base_link]
+  - group1: [r_gripper_palm_link, r_gripper_r_finger_link, r_gripper_l_finger_link]
+    group2: [r_shoulder_pan_link]
+  # arms => base_link
+  - group1: [r_gripper_palm_link, r_gripper_r_finger_link, r_gripper_l_finger_link]
+    group2: [base_link]
 
 include:
   - pr2_common/collision_spheres.yaml
