style: fix typos in comments

--- a/.github/workflows/check_format.yaml
+++ b/.github/workflows/check_format.yaml
@@ -27,7 +27,8 @@ jobs:
         - name: install clang-format
           run: |
               sudo apt-get update
-              sudo apt-get install clang-format
+              sudo apt-get install clang-format-14
+              clang-format --version
 
         - name: check
           run: |
@@ -38,6 +39,6 @@ jobs:
             if ! git diff --quiet; then
               echo "::error::Files are not properly formatted. Please run ./format.sh locally and commit the changes."
               echo "--- git diff (summary) ---"
-              git --no-pager diff --stat
+              git --no-pager diff
               exit 1
             fi
