--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,10 +17,10 @@ jobs:
     - name: Install publishing dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest setuptools wheel twine scikit-build
+        pip install wheel twine scikit-build build
 
     - name: Build and publish
       run: |
         git submodule update --init
-        python setup.py sdist
+        python -m build . --sdist
         twine upload --skip-existing -u __token__ -p ${{ secrets.PYPI_TOKEN }} dist/*
